// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden tests — real Supabase data > allDefaults > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 59,
    "slug": "wilson-winery",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 59,
    "slug": "sebastiani",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 58,
    "slug": "dry-creek-vineyard",
  },
]
`;

exports[`golden tests — real Supabase data > casualCouple > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [
      "region",
      "mustHaves",
    ],
    "score": 77,
    "slug": "iron-horse-vineyards",
  },
  {
    "rank": 2,
    "relaxed": [
      "region",
      "mustHaves",
    ],
    "score": 76,
    "slug": "gloria-ferrer",
  },
  {
    "rank": 3,
    "relaxed": [
      "region",
      "mustHaves",
    ],
    "score": 75,
    "slug": "landmark-hop-kiln",
  },
]
`;

exports[`golden tests — real Supabase data > familyTrip > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 76,
    "slug": "gundlach-bundschu",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 75,
    "slug": "imagery-estate",
  },
]
`;

exports[`golden tests — real Supabase data > luxuryGroup > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 81,
    "slug": "seghesio-family-vineyards",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 81,
    "slug": "rodney-strong",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 80,
    "slug": "iron-horse-vineyards",
  },
  {
    "rank": 4,
    "relaxed": [],
    "score": 80,
    "slug": "kendall-jackson",
  },
]
`;

exports[`golden tests — real Supabase data > singleRegionBudget > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 71,
    "slug": "gundlach-bundschu",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 64,
    "slug": "buena-vista-winery",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 57,
    "slug": "schug-carneros",
  },
]
`;

exports[`golden tests — real Supabase data > veryRestrictive > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [
      "region",
    ],
    "score": 78,
    "slug": "rodney-strong",
  },
  {
    "rank": 2,
    "relaxed": [
      "region",
    ],
    "score": 75,
    "slug": "wilson-winery",
  },
  {
    "rank": 3,
    "relaxed": [
      "region",
    ],
    "score": 67,
    "slug": "francis-ford-coppola",
  },
]
`;

exports[`golden tests — real Supabase data > wideOpen > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 59,
    "slug": "fort-ross-vineyard",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 56,
    "slug": "bella-winery",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 55,
    "slug": "kunde-family",
  },
  {
    "rank": 4,
    "relaxed": [],
    "score": 54,
    "slug": "medlock-ames",
  },
  {
    "rank": 5,
    "relaxed": [],
    "score": 54,
    "slug": "benziger-family-winery",
  },
]
`;
